// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AiService tool AI SDK contract executes a local tool, forwards timing, and sends the result into the second model call: successful local tool model calls 1`] = `
[
  {
    "abortSignal": {
      "aborted": false,
    },
    "prompt": [
      {
        "content": "You are a precise assistant.",
        "role": "system",
      },
      {
        "content": [
          {
            "text": "What is the weather?",
            "type": "text",
          },
        ],
        "role": "user",
      },
    ],
    "providerOptions": {
      "contract-provider": {},
    },
    "toolChoice": {
      "type": "auto",
    },
    "tools": [
      {
        "description": "Get the current weather for a city.",
        "inputSchema": {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "additionalProperties": false,
          "properties": {
            "city": {
              "type": "string",
            },
          },
          "required": [
            "city",
          ],
          "type": "object",
        },
        "name": "weather",
        "type": "function",
      },
    ],
  },
  {
    "abortSignal": {
      "aborted": false,
    },
    "prompt": [
      {
        "content": "You are a precise assistant.",
        "role": "system",
      },
      {
        "content": [
          {
            "text": "What is the weather?",
            "type": "text",
          },
        ],
        "role": "user",
      },
      {
        "content": [
          {
            "input": {
              "city": "Shanghai",
            },
            "toolCallId": "tool-call-1",
            "toolName": "weather",
            "type": "tool-call",
          },
        ],
        "role": "assistant",
      },
      {
        "content": [
          {
            "output": {
              "type": "json",
              "value": {
                "city": "Shanghai",
                "condition": "sunny",
              },
            },
            "toolCallId": "tool-call-1",
            "toolName": "weather",
            "type": "tool-result",
          },
        ],
        "role": "tool",
      },
    ],
    "providerOptions": {
      "contract-provider": {},
    },
    "toolChoice": {
      "type": "auto",
    },
    "tools": [
      {
        "description": "Get the current weather for a city.",
        "inputSchema": {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "additionalProperties": false,
          "properties": {
            "city": {
              "type": "string",
            },
          },
          "required": [
            "city",
          ],
          "type": "object",
        },
        "name": "weather",
        "type": "function",
      },
    ],
  },
]
`;

exports[`AiService tool AI SDK contract executes a local tool, forwards timing, and sends the result into the second model call: successful local tool output 1`] = `
{
  "chunks": [
    {
      "messageId": "assistant-message-tool",
      "type": "start",
    },
    {
      "type": "start-step",
    },
    {
      "input": {
        "city": "Shanghai",
      },
      "toolCallId": "tool-call-1",
      "toolName": "weather",
      "type": "tool-input-available",
    },
    {
      "output": {
        "city": "Shanghai",
        "condition": "sunny",
      },
      "toolCallId": "tool-call-1",
      "type": "tool-output-available",
    },
    {
      "type": "finish-step",
    },
    {
      "messageMetadata": {
        "completionTokens": 5,
        "promptTokens": 10,
        "thoughtsTokens": 1,
        "totalTokens": 15,
      },
      "type": "message-metadata",
    },
    {
      "type": "start-step",
    },
    {
      "id": "text-1",
      "type": "text-start",
    },
    {
      "delta": "Shanghai is sunny.",
      "id": "text-1",
      "type": "text-delta",
    },
    {
      "id": "text-1",
      "type": "text-end",
    },
    {
      "messageMetadata": {
        "completionTokens": 10,
        "promptTokens": 20,
        "thoughtsTokens": 2,
        "totalTokens": 30,
      },
      "type": "message-metadata",
    },
    {
      "type": "finish-step",
    },
    {
      "finishReason": "stop",
      "type": "finish",
    },
  ],
  "finalMessage": {
    "id": "assistant-message-tool",
    "metadata": {
      "completionTokens": 10,
      "promptTokens": 20,
      "thoughtsTokens": 2,
      "totalTokens": 30,
    },
    "parts": [
      {
        "type": "step-start",
      },
      {
        "input": {
          "city": "Shanghai",
        },
        "output": {
          "city": "Shanghai",
          "condition": "sunny",
        },
        "state": "output-available",
        "toolCallId": "tool-call-1",
        "type": "tool-weather",
      },
      {
        "type": "step-start",
      },
      {
        "state": "done",
        "text": "Shanghai is sunny.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
}
`;

exports[`AiService tool AI SDK contract materializes and executes an injected MCP tool through the real ToolResolver: MCP final message 1`] = `
{
  "id": "assistant-message-mcp",
  "metadata": {
    "completionTokens": 10,
    "promptTokens": 20,
    "thoughtsTokens": 2,
    "totalTokens": 30,
  },
  "parts": [
    {
      "type": "step-start",
    },
    {
      "input": {
        "path": "README.md",
      },
      "output": "contents:README.md",
      "state": "output-available",
      "toolCallId": "tool-call-1",
      "toolMetadata": {
        "cherry": {
          "tool": {
            "serverId": "files",
            "serverName": "Files",
            "type": "mcp",
          },
        },
      },
      "toolName": "mcp__files__read",
      "type": "dynamic-tool",
    },
    {
      "type": "step-start",
    },
    {
      "state": "done",
      "text": "The file was read.",
      "type": "text",
    },
  ],
  "role": "assistant",
}
`;

exports[`AiService tool AI SDK contract materializes and executes an injected MCP tool through the real ToolResolver: MCP model calls 1`] = `
[
  {
    "abortSignal": {
      "aborted": false,
    },
    "prompt": [
      {
        "content": "You are a precise assistant.",
        "role": "system",
      },
      {
        "content": [
          {
            "text": "Read the README.",
            "type": "text",
          },
        ],
        "role": "user",
      },
    ],
    "providerOptions": {
      "contract-provider": {},
    },
    "toolChoice": {
      "type": "auto",
    },
    "tools": [
      {
        "description": "Read a file through MCP.",
        "inputSchema": {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "additionalProperties": false,
          "properties": {
            "path": {
              "type": "string",
            },
          },
          "required": [
            "path",
          ],
          "type": "object",
        },
        "name": "mcp__files__read",
        "type": "function",
      },
    ],
  },
  {
    "abortSignal": {
      "aborted": false,
    },
    "prompt": [
      {
        "content": "You are a precise assistant.",
        "role": "system",
      },
      {
        "content": [
          {
            "text": "Read the README.",
            "type": "text",
          },
        ],
        "role": "user",
      },
      {
        "content": [
          {
            "input": {
              "path": "README.md",
            },
            "toolCallId": "tool-call-1",
            "toolName": "mcp__files__read",
            "type": "tool-call",
          },
        ],
        "role": "assistant",
      },
      {
        "content": [
          {
            "output": {
              "type": "text",
              "value": "contents:README.md",
            },
            "toolCallId": "tool-call-1",
            "toolName": "mcp__files__read",
            "type": "tool-result",
          },
        ],
        "role": "tool",
      },
    ],
    "providerOptions": {
      "contract-provider": {},
    },
    "toolChoice": {
      "type": "auto",
    },
    "tools": [
      {
        "description": "Read a file through MCP.",
        "inputSchema": {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "additionalProperties": false,
          "properties": {
            "path": {
              "type": "string",
            },
          },
          "required": [
            "path",
          ],
          "type": "object",
        },
        "name": "mcp__files__read",
        "type": "function",
      },
    ],
  },
]
`;

exports[`AiService tool AI SDK contract returns a local tool exception to the model and still accepts its final answer: tool error second model call 1`] = `
{
  "abortSignal": {
    "aborted": false,
  },
  "prompt": [
    {
      "content": "You are a precise assistant.",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Check the status.",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "input": {
            "query": "status",
          },
          "toolCallId": "tool-call-1",
          "toolName": "unstable",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "error-text",
            "value": "tool unavailable",
          },
          "toolCallId": "tool-call-1",
          "toolName": "unstable",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "providerOptions": {
    "contract-provider": {},
  },
  "toolChoice": {
    "type": "auto",
  },
  "tools": [
    {
      "inputSchema": {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "additionalProperties": false,
        "properties": {
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "name": "unstable",
      "type": "function",
    },
  ],
}
`;

exports[`AiService tool AI SDK contract returns agentic web search citations through the tool loop: web search first model call 1`] = `
{
  "abortSignal": {
    "aborted": false,
  },
  "prompt": [
    {
      "content": "You are a precise assistant.

<citations>
When a statement in your answer is based on a web_search, web_fetch, kb_search, or kb_read result, append a citation marker immediately after that statement: [cite:ID], where ID is the exact \`id\` field of the supporting result item.
- Example: "Cherry Studio 2.0 entered beta in May. [cite:3f2a1b9c-2]"
- Chain markers when several results support one statement: [cite:3f2a1b9c-1][cite:7d4e0a51-3]
- Copy ids exactly as returned by the tool. Never invent, renumber, or reuse ids from other results.
- Do not add a "References" or "Sources" section at the end - the app renders citations from the inline markers.
- Statements from your own knowledge take no marker.
</citations>",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Is Cherry Studio available on mobile?",
          "type": "text",
        },
      ],
      "role": "user",
    },
  ],
  "providerOptions": {
    "contract-provider": {},
  },
  "toolChoice": {
    "type": "auto",
  },
  "tools": [
    {
      "description": "Fetch the readable content from one or more known web page URLs.

Use this when:
- You already have specific URLs from the user, prior context, or web_search
- You need page content from an article, documentation page, or reference URL
- Search snippets are not enough and you need the source page text

Don't use this when you only have a topic or question; call web_search first.

Cite: append [cite:id] immediately after each statement a result supports, using the result's exact \`id\` field.",
      "inputSchema": {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "additionalProperties": false,
        "properties": {
          "urls": {
            "description": "Absolute http(s) web page URLs to fetch and summarize. Use web_search first when you do not know the URL.",
            "items": {
              "minLength": 1,
              "type": "string",
            },
            "maxItems": 20,
            "minItems": 1,
            "type": "array",
          },
        },
        "required": [
          "urls",
        ],
        "type": "object",
      },
      "name": "web_fetch",
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search the web for current information, news, and real-time data.

Use this when:
- The user asks about recent events, current prices, or live data
- You need to verify facts you're uncertain about or that may have changed
- The user references something you don't have context on

Don't use for:
- Math, code reasoning, or things you can answer from your training
- Well-known facts unlikely to have changed

You may call this multiple times with different queries to broaden coverage:
- If the topic likely has more authoritative sources in another language
  (English for tech / scientific topics, the local language for regional news,
  Japanese for anime / manga, etc.), repeat the search with the topic translated
  into the most likely source language.
- If the first results miss an angle, refine with synonyms or sub-aspects.

Cite: append [cite:id] immediately after each statement a result supports, using the result's exact \`id\` field.",
      "inputSchema": {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "additionalProperties": false,
        "properties": {
          "query": {
            "description": "Self-contained web search query. MUST NOT use pronouns ("it", "their") or context-dependent references; expand the topic from earlier messages when the user asks a follow-up. Examples: ✓ "Anthropic Claude 4.5 release date", ✗ "when did it ship".",
            "maxLength": 200,
            "minLength": 2,
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "name": "web_search",
      "strict": true,
      "type": "function",
    },
  ],
}
`;

exports[`AiService tool AI SDK contract returns agentic web search citations through the tool loop: web search second model call 1`] = `
{
  "abortSignal": {
    "aborted": false,
  },
  "prompt": [
    {
      "content": "You are a precise assistant.

<citations>
When a statement in your answer is based on a web_search, web_fetch, kb_search, or kb_read result, append a citation marker immediately after that statement: [cite:ID], where ID is the exact \`id\` field of the supporting result item.
- Example: "Cherry Studio 2.0 entered beta in May. [cite:3f2a1b9c-2]"
- Chain markers when several results support one statement: [cite:3f2a1b9c-1][cite:7d4e0a51-3]
- Copy ids exactly as returned by the tool. Never invent, renumber, or reuse ids from other results.
- Do not add a "References" or "Sources" section at the end - the app renders citations from the inline markers.
- Statements from your own knowledge take no marker.
</citations>",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Is Cherry Studio available on mobile?",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "input": {
            "query": "Cherry Studio current release",
          },
          "toolCallId": "tool-call-1",
          "toolName": "web_search",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "json",
            "value": [
              {
                "content": "Cherry Studio is available on mobile.",
                "id": "<citation-1>",
                "title": "Cherry Studio",
                "url": "https://example.com/cherry",
              },
            ],
          },
          "toolCallId": "tool-call-1",
          "toolName": "web_search",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "providerOptions": {
    "contract-provider": {},
  },
  "toolChoice": {
    "type": "auto",
  },
  "tools": [
    {
      "description": "Fetch the readable content from one or more known web page URLs.

Use this when:
- You already have specific URLs from the user, prior context, or web_search
- You need page content from an article, documentation page, or reference URL
- Search snippets are not enough and you need the source page text

Don't use this when you only have a topic or question; call web_search first.

Cite: append [cite:id] immediately after each statement a result supports, using the result's exact \`id\` field.",
      "inputSchema": {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "additionalProperties": false,
        "properties": {
          "urls": {
            "description": "Absolute http(s) web page URLs to fetch and summarize. Use web_search first when you do not know the URL.",
            "items": {
              "minLength": 1,
              "type": "string",
            },
            "maxItems": 20,
            "minItems": 1,
            "type": "array",
          },
        },
        "required": [
          "urls",
        ],
        "type": "object",
      },
      "name": "web_fetch",
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search the web for current information, news, and real-time data.

Use this when:
- The user asks about recent events, current prices, or live data
- You need to verify facts you're uncertain about or that may have changed
- The user references something you don't have context on

Don't use for:
- Math, code reasoning, or things you can answer from your training
- Well-known facts unlikely to have changed

You may call this multiple times with different queries to broaden coverage:
- If the topic likely has more authoritative sources in another language
  (English for tech / scientific topics, the local language for regional news,
  Japanese for anime / manga, etc.), repeat the search with the topic translated
  into the most likely source language.
- If the first results miss an angle, refine with synonyms or sub-aspects.

Cite: append [cite:id] immediately after each statement a result supports, using the result's exact \`id\` field.",
      "inputSchema": {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "additionalProperties": false,
        "properties": {
          "query": {
            "description": "Self-contained web search query. MUST NOT use pronouns ("it", "their") or context-dependent references; expand the topic from earlier messages when the user asks a follow-up. Examples: ✓ "Anthropic Claude 4.5 release date", ✗ "when did it ship".",
            "maxLength": 200,
            "minLength": 2,
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "name": "web_search",
      "strict": true,
      "type": "function",
    },
  ],
}
`;
